# czsc_skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
czsc_skills/: __init__.py  base.py
czsc_skills/skills/: __init__.py  bi_recognition.py  fractal_detector.py  signal_generator.py
examples/: basic_usage.py  custom_skill.py
skills/bi-analyzer/: SKILL.md
skills/czsc-thinking/: SKILL.md  validate_structure.py
skills/czsc-thinking/examples/: usage-scenarios.md
skills/czsc-thinking/references/: chan-theory-core.md
skills/czsc-thinking/scripts/: README.md  TEST_RESULTS.md  analyze_czsc_structure.py  example_workflow.py  fetch_market_data.py  requirements.txt  signal_analysis.py
skills/fractal-detector/: SKILL.md
skills/signal-generator/: SKILL.md
tests/: test_basic.py
